# DSVT-AI-TRT

./: CMakeLists.txt  README.md
include/: helper.h  params.h  plugin_helper.h
plugins/include/: filterBoxByScore.h  gelu.h  getSet.h  getValueByIndex.h  layerNorm.h  map2bev.h  mapSetFeature2voxel.h  points2Features.h  torchScatterMax.h  windowPartition.h
plugins/src/: filterBoxByScore.cu  gelu.cu  getSet.cu  getValueByIndex.cu  layerNorm.cu  map2bev.cu  mapSetFeature2voxel.cu  points2Features.cu  torchScatterMax.cu  windowPartition.cu
src/: dsvt-ai-trt.cpp
tools/: dsvt_cbgs_dyn_pp_centerpoint.yaml  gen_wts.py  nuscenes_dataset.yaml  show_box_in_points.py
tools/mayavi_tool/: viz_util.py
